# HonorsAppFinal

./: CMakeLists.txt  Darrell Moreno -  Honors Project.pptx  Makefile  Makefile.Debug  Makefile.Release  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  untitled.pro  untitled.pro.user.24addb5  untitled.pro.user.6d63910
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Exercise.cpp.0461BCBE4B77DCB8.idx  Food.cpp.096154BEE8D5EA34.idx  LogManager.cpp.BFD10E7027CB4174.idx  LogManager.h.F3B6A816B15E774B.idx  Nutrition.cpp.DAD10459B6AD83AD.idx  Nutrition.h.41147F203BDB03E9.idx  Records.h.AF325E805D2281B3.idx  Tutorials.cpp.3CBFF50219C924CC.idx  User.cpp.7AD1B1B0BE16E665.idx  User.h.8F15B5EB534FBEBA.idx  main.cpp.0315640267D0B0D6.idx  mainwindow.cpp.AA03209ED3ACBF25.idx  mainwindow.h.7A83C8A3D55CF711.idx  qcomparehelpers.h.6F93580AF2969168.idx  qdeadlinetimer.h.F21A894FD19B8497.idx  qfile.h.3447DA72251CA5FF.idx  qflags.h.FCD6CC383BB39F80.idx  qmetatype.h.C1D5D607AAEF1069.idx  qnativeinterface.h.800F7A0C53C23132.idx  qobject.h.4A6401BE98E357A7.idx  qplugin.h.7DC4E2E7C4D21FF8.idx  qpointer.h.B30845149DF266D2.idx  qtclasshelpermacros.h.1540359444ED8977.idx  qtmetamacros.h.926F69906D9048A2.idx  qtypeinfo.h.3972F46C59FA7A27.idx  qwidget.h.7FF9BFEFC9688026.idx  qwindowdefs.h.73854712AE1374E7.idx  (+2 more)
debug/: moc_mainwindow.cpp
icons/: Background.xcf
include/: Exercise.h  Food.h  LogManager.h  Nutrition.h  Records.h  Tutorials.h
src/: Exercise.cpp  Food.cpp  LogManager.cpp  Nutrition.cpp  Tutorials.cpp
